test/invalid-semantic/58185_wrong_function_parameter/wrong_funtion_parameter.agu
-- Author: Eduardo Santos, 58185
-- Semantic error: wrong function parameter type, should be Int

let isPositive (n) : Int -> Bool =
    n > 0
    
let main : Unit =
    print(isPositive(true))  